[package]
name = "ext_lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
js-sys = "0.3"
serde_with = {version= "1.9.5",features = ["json"]}

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Event",
    "HtmlElement",
    "console",
]